# ArmNNDemo

./: .gitignore  Readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: imagenet_class_labels.txt
app/src/main/cpp/: CMakeLists.txt  ClassifierNetwork.cpp  ClassifierNetwork.h  SegmentatorNetwork.cpp  SegmentatorNetwork.h  native-lib.cpp
app/src/main/java/com/arm/armnn_demo/: Classifier.java  MainActivity.java  Segmentator.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
